feature:page index

--- a/frontend/cute-blog-vanillajs/index.html
+++ b/frontend/cute-blog-vanillajs/index.html
@@ -5,7 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>cute blog</title>
+    <link rel="stylesheet" href="./font/iconfont.css">
+    <link rel="stylesheet" href="./styles/common/common.css">
+    <link rel="stylesheet" href="./styles/common/normalize.css">
+    <link rel="stylesheet" href="./styles/pages/index.css">
 </head>
 
 <body>
@@ -13,14 +17,85 @@
         <div class="top-nav">
             <img class="logo" src="" alt="logo">
             <div class="nav-item nav-item_active">首页</div>
-            <div class="nav-item">推荐</div>
+            <div class="nav-item">发现</div>
         </div>
         <div class="main-wrapper">
-            <div class="tab-wrapper">
-                <div class="tab-item tab-item_active">关注</div>
-                <div class="tab-item">推荐</div>
-                <div class="tab-item">热门</div>
-            </div>
+            <main class="section-wrapper section-main">
+                <div class="tab-wrapper">
+                    <div class="tab-item tab-item_active">关注</div>
+                    <div class="tab-item">推荐</div>
+                    <div class="tab-item">热门</div>
+                </div>
+                <div class="article-list">
+                    <a class="article-item" href="./home.html">
+                        <h3>Vue 3.0 来了，我们该做些什么？</h3>
+                        <p class="summary">Composition API解决了什么问题？ 使用传统的 Vue2.x
+                            配置方法写组件的时候问题，随着业务复杂度越来越高，代码量会不断的加大。由于相关业务的代码需要遵循option 的配置写到特定的区域，导致后续维护非常…</p>
+                        <div class="row-num">
+                            <span class="num-group">
+                                <span class="icon iconfont icon-good-fill"></span>
+                                <span>233</span>
+                            </span>
+                            <span class="num-group">
+                                <span class="icon iconfont icon-comments-fill"></span>
+                                <span>23</span>
+                            </span>
+                            <span class="num-group">
+                                <span class="icon iconfont icon-collection-fill"></span>
+                                <span>20</span>
+                            </span>
+                        </div>
+                    </a>
+                    <a class="article-item" href="./home.html">
+                        <h3>Vue 3.0 来了，我们该做些什么？</h3>
+                        <p class="summary">Composition API解决了什么问题？ 使用传统的 Vue2.x
+                            配置方法写组件的时候问题，随着业务复杂度越来越高，代码量会不断的加大。由于相关业务的代码需要遵循option 的配置写到特定的区域，导致后续维护非常…</p>
+                        <div class="row-num">
+                            <span class="num-group">
+                                <span class="icon iconfont icon-good-fill"></span>
+                                <span>233</span>
+                            </span>
+                            <span class="num-group">
+                                <span class="icon iconfont icon-comments-fill"></span>
+                                <span>23</span>
+                            </span>
+                            <span class="num-group">
+                                <span class="icon iconfont icon-collection-fill"></span>
+                                <span>20</span>
+                            </span>
+                        </div>
+                    </a>
+                    <a class="article-item" href="./home.html">
+                        <h3>Vue 3.0 来了，我们该做些什么？</h3>
+                        <p class="summary">Composition API解决了什么问题？ 使用传统的 Vue2.x
+                            配置方法写组件的时候问题，随着业务复杂度越来越高，代码量会不断的加大。由于相关业务的代码需要遵循option 的配置写到特定的区域，导致后续维护非常…</p>
+                        <div class="row-num">
+                            <span class="num-group">
+                                <span class="icon iconfont icon-good-fill"></span>
+                                <span>233</span>
+                            </span>
+                            <span class="num-group">
+                                <span class="icon iconfont icon-comments-fill"></span>
+                                <span>23</span>
+                            </span>
+                            <span class="num-group">
+                                <span class="icon iconfont icon-collection-fill"></span>
+                                <span>20</span>
+                            </span>
+                        </div>
+                    </a>
+
+                    <div class="my-pagination">todo:下拉加载更多或者翻页组件</div>
+                </div>
+            </main>
+            <aside class="my-aside">
+                <div class="section-wrapper section-aside">
+                    运营图 - 占位
+                </div>
+                <div class="section-wrapper section-aside">
+                    运营图 - 占位
+                </div>
+            </aside>
         </div>
     </div>
 </body>
