--- a/frontend/cute-blog-vanillajs/register.html
+++ b/frontend/cute-blog-vanillajs/register.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>cute blog</title>
+    <title>注册 - cute blog</title>
     <link rel="stylesheet" href="./styles/common/common.css">
     <link rel="stylesheet" href="./styles/common/normalize.css">
     <link rel="stylesheet" href="./styles/pages/login.css">
