--- a/frontend/cute-blog-vanillajs/article.html
+++ b/frontend/cute-blog-vanillajs/article.html
@@ -51,45 +51,47 @@
                 <div class="section-wrapper section-comment">
                     <div class="row">
                         <div class="avatar-wrapper">
-                            <img src="" alt="avatar">
+                            <img src="./images/avatar-peppa.png" alt="avatar">
                         </div>
-                        <input type="textarea" placeholder="输入评论">
+                        <div class="comment-input-wrapper">
+                            <textarea class="input-comment" placeholder="输入评论" rows="20"></textarea>
+                        </div>
                     </div>
                     <div class="row-btn">
                         <button class="cute-btn-small">发布</button>
-                        <button class="cute-btn-small">取消</button>
+                        <button class="btn-cancel cute-btn-small cute-btn-gray cute-btn-gray-plain">取消</button>
                     </div>
                     <div class="comment-list">
                         <div class="comment-item">
-                            <img src="./images/avatar-suxi.png" alt="avatar">
+                            <img class="comment-avatar" src="./images/avatar-suxi.png" alt="avatar">
                             <div class="comment-main">
                                 <div class="row row-name">苏西</div>
                                 <div class="row row-time">沙发 1小时前</div>
-                                <div class="row row-content"></div>
+                                <div class="row row-content">这篇文章写得好好呀</div>
                             </div>
                         </div>
                         <div class="comment-item">
-                            <img src="./images/avatar-suxi.png" alt="avatar">
+                            <img class="comment-avatar" src="./images/avatar-suxi.png" alt="avatar">
                             <div class="comment-main">
                                 <div class="row row-name">苏西</div>
                                 <div class="row row-time">沙发 1小时前</div>
-                                <div class="row row-content"></div>
+                                <div class="row row-content">这篇文章写得好好呀</div>
                             </div>
                         </div>
                         <div class="comment-item">
-                            <img src="./images/avatar-suxi.png" alt="avatar">
+                            <img class="comment-avatar" src="./images/avatar-suxi.png" alt="avatar">
                             <div class="comment-main">
                                 <div class="row row-name">苏西</div>
                                 <div class="row row-time">沙发 1小时前</div>
-                                <div class="row row-content"></div>
+                                <div class="row row-content">这篇文章写得好好呀</div>
                             </div>
                         </div>
                         <div class="comment-item">
-                            <img src="./images/avatar-suxi.png" alt="avatar">
+                            <img class="comment-avatar" src="./images/avatar-suxi.png" alt="avatar">
                             <div class="comment-main">
                                 <div class="row row-name">苏西</div>
                                 <div class="row row-time">沙发 1小时前</div>
-                                <div class="row row-content"></div>
+                                <div class="row row-content">这篇文章写得好好呀</div>
                             </div>
                         </div>
                     </div>
