feature: 文章详情页-侧边栏样式

--- a/frontend/cute-blog-vanillajs/article.html
+++ b/frontend/cute-blog-vanillajs/article.html
@@ -98,59 +98,64 @@
                 </div>
             </main>
             <aside class="my-aside">
-                <div class="section-wrapper section-aside">
+                <div class="section-wrapper section-aside section-aside-author">
                     <div class="author-wrapper">
                         <div class="img-wrapper">
-                            <img src="" alt="author-avatar">
+                            <img class="author-avatar" src="./images/avatar-peppa.png" alt="author-avatar">
                         </div>
                         <div class="info-wrapper">
                             <div class="row">
                                 <span class="name">佩奇</span>
                                 <button class="btn-follow">关注</button>
                             </div>
-                            <div class="row">
+                            <div class="row row-time">
                                 <span class="time">发布于2小时前</span>
                                 <span class="read-num">阅读 2333</span>
                             </div>
                         </div>
                     </div>
+                    <hr class="author-line">
                     <div class="recommend-list">
                         <div class="recommend-item">
                             <h4>浅谈Promise之参照Promise/A+规范实现Promise类</h4>
-                            <span>阅读 200</span>
+                            <span class="time">阅读 200</span>
                         </div>
                         <div class="recommend-item">
                             <h4>浅谈Promise之参照Promise/A+规范实现Promise类</h4>
-                            <span>阅读 200</span>
+                            <span class="time">阅读 200</span>
                         </div>
                         <div class="recommend-item">
                             <h4>浅谈Promise之参照Promise/A+规范实现Promise类</h4>
-                            <span>阅读 200</span>
+                            <span class="time">阅读 200</span>
                         </div>
                         <div class="recommend-item">
                             <h4>浅谈Promise之参照Promise/A+规范实现Promise类</h4>
-                            <span>阅读 200</span>
+                            <span class="time">阅读 200</span>
                         </div>
                     </div>
                 </div>
                 <div class="section-wrapper section-aside">
-                    <div class="section-title">推荐阅读</div>
+                    <div class="section-title section-recommend-title">推荐阅读</div>
                     <div class="recommend-list">
                         <div class="recommend-item">
                             <h4>浅谈Promise之参照Promise/A+规范实现Promise类</h4>
-                            <span>阅读 200</span>
+                            <span class="time">阅读 200</span>
                         </div>
                         <div class="recommend-item">
                             <h4>浅谈Promise之参照Promise/A+规范实现Promise类</h4>
-                            <span>阅读 200</span>
+                            <span class="time">阅读 200</span>
                         </div>
                         <div class="recommend-item">
                             <h4>浅谈Promise之参照Promise/A+规范实现Promise类</h4>
-                            <span>阅读 200</span>
+                            <span class="time">阅读 200</span>
                         </div>
                         <div class="recommend-item">
                             <h4>浅谈Promise之参照Promise/A+规范实现Promise类</h4>
-                            <span>阅读 200</span>
+                            <span class="time">阅读 200</span>
+                        </div>
+                        <div class="recommend-item">
+                            <h4>浅谈Promise之参照Promise/A+规范实现Promise类</h4>
+                            <span class="time">阅读 200</span>
                         </div>
                     </div>
                 </div>
