--- a/frontend/cute-blog-vanillajs/index.html
+++ b/frontend/cute-blog-vanillajs/index.html
@@ -15,9 +15,11 @@
 <body>
     <div class="page-wrapper page-home">
         <div class="top-nav">
-            <img class="logo" src="" alt="logo">
-            <div class="nav-item nav-item_active">首页</div>
-            <div class="nav-item">发现</div>
+            <a href="./index.html"><img class="logo" src="./images/logo.png" alt="logo"></a>
+            <div class="nav-wrapper">
+                <a class="nav-item nav-item_active" href="./index.html">首页</a>
+                <a class="nav-item" href="./explore.html">发现</a>
+            </div>
         </div>
         <div class="main-wrapper">
             <main class="section-wrapper section-main">
@@ -27,7 +29,7 @@
                     <div class="tab-item">热门</div>
                 </div>
                 <div class="article-list">
-                    <a class="article-item" href="./home.html">
+                    <a class="article-item" href="./article.html">
                         <h3>Vue 3.0 来了，我们该做些什么？</h3>
                         <p class="summary">Composition API解决了什么问题？ 使用传统的 Vue2.x
                             配置方法写组件的时候问题，随着业务复杂度越来越高，代码量会不断的加大。由于相关业务的代码需要遵循option 的配置写到特定的区域，导致后续维护非常…</p>
@@ -46,7 +48,7 @@
                             </span>
                         </div>
                     </a>
-                    <a class="article-item" href="./home.html">
+                    <a class="article-item" href="./article.html">
                         <h3>Vue 3.0 来了，我们该做些什么？</h3>
                         <p class="summary">Composition API解决了什么问题？ 使用传统的 Vue2.x
                             配置方法写组件的时候问题，随着业务复杂度越来越高，代码量会不断的加大。由于相关业务的代码需要遵循option 的配置写到特定的区域，导致后续维护非常…</p>
@@ -65,7 +67,7 @@
                             </span>
                         </div>
                     </a>
-                    <a class="article-item" href="./home.html">
+                    <a class="article-item" href="./article.html">
                         <h3>Vue 3.0 来了，我们该做些什么？</h3>
                         <p class="summary">Composition API解决了什么问题？ 使用传统的 Vue2.x
                             配置方法写组件的时候问题，随着业务复杂度越来越高，代码量会不断的加大。由于相关业务的代码需要遵循option 的配置写到特定的区域，导致后续维护非常…</p>
