--- a/frontend/cute-blog-vanillajs/article.html
+++ b/frontend/cute-blog-vanillajs/article.html
@@ -14,10 +14,10 @@
 <body>
     <div class="page-wrapper page-article-detail">
         <div class="top-nav">
-            <img class="logo" src="./images/logo.png" alt="logo">
+            <a href="./index.html"><img class="logo" src="./images/logo.png" alt="logo"></a>
             <div class="nav-wrapper">
-                <div class="nav-item nav-item_active">首页</div>
-                <div class="nav-item">发现</div>
+                <a class="nav-item" href="./index.html">首页</a>
+                <a class="nav-item" href="./explore.html">发现</a>
             </div>
         </div>
         <div class="main-wrapper">
