--- a/frontend/cute-blog-vanillajs/write.html
+++ b/frontend/cute-blog-vanillajs/write.html
@@ -9,8 +9,7 @@
     <link rel="stylesheet" href="./styles/common/common.css">
     <link rel="stylesheet" href="./styles/common/normalize.css">
     <link rel="stylesheet" href="./styles/pages/write.css">
-    <!-- <script src="http://tinymce.ax-z.cn/static/js/jquery.js"></script> -->
-    <script src="http://tinymce.ax-z.cn/static/tiny/tinymce.js?v5.2.0"></script>
+    <script src="./js/lib/tinymce/js/tinymce/tinymce.min.js"></script>
     <style>
         #doc-app {
             display: none;
@@ -77,9 +76,11 @@
 
 <body>
     <div class="top-nav">
-        <img class="logo" src="" alt="logo">
-        <div class="nav-item nav-item_active">首页</div>
-        <div class="nav-item">发现</div>
+        <a href="./index.html"><img class="logo" src="./images/logo.png" alt="logo"></a>
+        <div class="nav-wrapper">
+            <a class="nav-item nav-item_active" href="./index.html">首页</a>
+            <a class="nav-item" href="./explore.html">发现</a>
+        </div>
     </div>
     <div class="page-wrapper page-write">
         <div class="main-wrapper">
