--- a/frontend/cute-blog-vanillajs/explore.html
+++ b/frontend/cute-blog-vanillajs/explore.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>发现</title>
+    <link rel="stylesheet" href="./font/iconfont.css">
     <link rel="stylesheet" href="./styles/common/common.css">
     <link rel="stylesheet" href="./styles/common/normalize.css">
 </head>
@@ -15,6 +16,12 @@
         <div class="nav-wrapper">
             <a class="nav-item" href="./index.html">首页</a>
             <a class="nav-item nav-item_active" href="./explore.html">发现</a>
+            <a href="./write.html" class="btn-write-wrapper">
+                <button class="cute-btn-basic nav-btn-write">
+                    <span class="icon-btn iconfont icon-editor"></span> 
+                    <span>写文章</span>
+                </button>
+            </a>
         </div>
     </div>
     <p style="text-align: center;margin-top:40px;">页面正在开发中</p>
