--- a/frontend/cute-blog-vanillajs/write.html
+++ b/frontend/cute-blog-vanillajs/write.html
@@ -80,6 +80,12 @@
         <div class="nav-wrapper">
             <a class="nav-item nav-item_active" href="./index.html">首页</a>
             <a class="nav-item" href="./explore.html">发现</a>
+            <a href="./write.html" class="btn-write-wrapper">
+                <button class="cute-btn-basic nav-btn-write">
+                    <span class="icon-btn iconfont icon-editor"></span> 
+                    <span>写文章</span>
+                </button>
+            </a>
         </div>
     </div>
     <div class="page-wrapper page-write">
